# Python-Compiler

./: README.md  inputfile.py  main.c  outputfile.asm  pyco  scanner  scanner.c  scanner.flex  test  tokens.h
Code_Generator/: code_generator.c  code_generator.h
Helper-Functions/: first  first.c  test  test.c  test_grammar
Lexer/: common.h  inputfile.py  lexer.c  lexer.h  main.c  reserved_words.md  test
Notes/: CFGs And Their Components.md  CFGs-And-Their-Components.md  Compiler-Notes.aux  Compiler-Notes.fdb_latexmk  Compiler-Notes.fls  Compiler-Notes.tex  Compiler-Notes.xdv  notes.aux  notes.tex
Notes/latex/: Compiler-Notes.aux  Compiler-Notes.fdb_latexmk  Compiler-Notes.fls
Parser/: parser.c  parser.h  test_parser
Scanner/: scanner  scanner.c  tokens.h
Testing/: testing.c  testing.h
docs/: Input_Corpus.md  README.md
docs/UML/Control_Flow_Graph_Generation_Scheme/: README.md
docs/UML/Control_Flow_Graph_Generation_Scheme/module/md/: full_calc_CFG.md  full_calc_CFG.txt
docs/UML/Control_Flow_Graph_Generation_Scheme/submodules/md/: calc_CFG.md  calc_CFG.txt  calc_CFG_block.md  calc_CFG_block.txt  calc_CFG_edges.md  calc_CFG_edges.txt  calc_CFG_head_arr.md  calc_CFG_head_arr.txt  calc_CFG_inst.md  calc_CFG_inst.txt  calc_CFG_last_inst.md  calc_CFG_last_inst.txt  calc_CFG_loop_const.md  calc_CFG_loop_const.txt  calc_CFG_num_blocks.md  calc_CFG_num_blocks.txt  calc_CFG_num_list_items.md  calc_CFG_num_list_items.txt  calc_CFG_tail_arr.md  calc_CFG_tail_arr.txt
docs/UML/Single_Static_Assignment_Generation_Scheme/: README.md
docs/UML/Single_Static_Assignment_Generation_Scheme/submodules/md/: calc_SSA_CFG_post_order_index.txt  calc_SSA_Size_tLL_set_member.txt  calc_SSA_append_to_df.md  calc_SSA_append_to_ll_sparse.txt  calc_SSA_append_to_pred_list.md  calc_SSA_delete_Size_tLL.txt  calc_SSA_dominance_frontier_sets.md  calc_SSA_dominance_frontier_sets.txt  calc_SSA_dominator_arr.md  calc_SSA_dominator_intersect.md  calc_SSA_global_name_set.txt  calc_SSA_nth_predecessor.md  calc_SSA_nth_predecessor.txt  calc_SSA_num_preds.md  calc_SSA_operation_block_set.md  calc_SSA_operation_block_set.txt  calc_SSA_phi_insertion.txt  calc_SSA_pop_from_Size_tLL.txt  calc_SSA_post_ordering.md  calc_SSA_pred_set_of_sets.md  calc_SSA_pred_set_of_sets.txt  calc_SSA_push_to_Size_tLL.txt
src/: CMakeLists.txt  CMakeSettings.json  main.c  proj_version.cmake
src/Code_Generator/: code_generator.c  code_generator.h
src/Lexer/: lexer.c  lexer.h
src/Parser/: parser.c  parser.h
src/Testing/: testing.c  testing.h  unit_tests.cc
src/Utils/: get_version_num.c  get_version_num.c.in  get_version_num.h
